# apkre

./: .gitignore  README.md  pyproject.toml
apkre/: __init__.py  __main__.py  session.py
apkre/analysis/: auth_detector.py  endpoint_merger.py  schema_inferrer.py
apkre/device/: prereq_check.py  setup.py
apkre/dynamic/: ai_explorer.py  frida_agent.js  frida_controller.py  logcat_tap.py  mitmproxy_tap.py  token_extractor.py
apkre/output/: curl_builder.py  openapi_builder.py  postman_builder.py
apkre/platform/: __init__.py  anti_detect.py  avd_provisioner.py  cli.py  config.py  identity_randomizer.py  lifecycle.py  vnc_manager.py
apkre/static/: apk_unpack.py  dart_scanner.py  string_scanner.py
examples/: bambu-api.yaml  bambu-curls.sh  bambu-postman.json
examples/bambu-handy/: bambu-api-spec.yaml  bambu-curls.sh  bambu-postman.json
